Add almost flat styling; majore refactors.

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -3,7 +3,11 @@
 @import "jquery.ui.slider";
 @import "font-awesome";
 
+// @import "almost_flat";
+@import "bootstrap_overrides";
+
 @import "util";
+@import "variables";
 @import "base";
 @import "nav";
 
