Bootstrap DatePicker works

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -1,6 +1,7 @@
 @import "bootstrap";
 @import "jquery.ui.datepicker";
 @import "jquery.ui.slider";
+@import "bootstrap-datetimepicker";
 @import "font-awesome";
 
 // @import "almost_flat";
