--- a/app/assets/stylesheets/util.css.scss
+++ b/app/assets/stylesheets/util.css.scss
@@ -69,6 +69,9 @@
 .u-display-inline-block {
   display: inline-block;
 }
+.u-display-inline {
+  display: inline;
+}
 .u-display-table {
   display: table;
 }
