Styling for button

--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -79,5 +79,8 @@ input[type="color"] {
     border-radius: $border-radius-base;
   }
 }
+.btn:focus {
+  outline: none !important;
+}
 
 // Input group
